# Copyright 2022 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Enable runtime call stats.
  v8_enable_runtime_call_stats = true

  # Sets -dENABLE_HANDLE_ZAPPING.
  v8_enable_handle_zapping = true
}