# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("v8_gdb_server") {
  testonly = true

  data_deps = [
    "../..:d8",
    "../../tools:v8_testrunner",
  ]

  data = [
    "./",
  ]
}
