# Copyright 2018 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("v8_mjsunit") {
  testonly = true

  data_deps = [
    "../../:d8",
    "../../tools/:v8_testrunner",
  ]

  data = [
    "./",
    "../../tools/arguments.js",
    "../../tools/clusterfuzz/v8_mock.js",
    "../../tools/clusterfuzz/v8_mock_archs.js",
    "../../tools/clusterfuzz/v8_mock_webassembly.js",
    "../../tools/codemap.js",
    "../../tools/consarray.js",
    "../../tools/csvparser.js",
    "../../tools/dumpcpp.js",
    "../../tools/logreader.js",
    "../../tools/profile.js",
    "../../tools/profile_view.js",
    "../../tools/splaytree.js",
    "../../tools/system-analyzer/log/log.mjs",
    "../../tools/system-analyzer/timeline.mjs",
    "../../tools/tickprocessor.js",
  ]
}
